--- a/config.yaml
+++ b/config.yaml
@@ -11,10 +11,10 @@
 carpentry: 'swc'
 
 # Overall title for pages.
-title: 'R for Reproducible Scientific Analysis'
+title: 'UCL ClinicianCoders - R for Reproducible Scientific Analysis'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: '2015-04-18'
+created: '2023-10-26'
 
 # Comma-separated list of keywords for the lesson
 keywords: 'software, data, lesson, The Carpentries'
@@ -27,13 +27,13 @@ life_cycle: 'stable'
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/swcarpentry/r-novice-gapminder'
+source: 'https://github.com/UCL/ClinicianCoders'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'team@carpentries.org'
+contact: 'arc-teaching@ucl.ac.uk'
 
 # Navigation ------------------------------------------------
 #
@@ -58,7 +58,7 @@ contact: 'team@carpentries.org'
 # - another-learner.md
 
 # Order of episodes in your lesson
-episodes: 
+episodes:
 - 01-rstudio-intro.Rmd
 - 02-project-intro.Rmd
 - 03-seeking-help.Rmd
@@ -77,13 +77,13 @@ episodes:
 - 16-wrap-up.Rmd
 
 # Information for Learners
-learners: 
+learners:
 
 # Information for Instructors
-instructors: 
+instructors:
 
 # Learner Profiles
-profiles: 
+profiles:
 
 # Customisation ---------------------------------------------
 #
@@ -91,6 +91,6 @@ profiles:
 # sandpaper and varnish versions) should live
 
 
-url: 'https://swcarpentry.github.io/r-novice-gapminder'
+url: 'https://UCL.github.io/ClinicianCoders'
 analytics: carpentries
 lang: en
